ci: merge build and test actions
test java 17 and 21